# idle-outpost

./: .env.example  .gitignore  .gitleaksignore  .llm-review-probe  CONTRIBUTING.md  README.md  auth.py  claim_api.py  main.py  notifier.py  pyproject.toml  redeemer.py  scraper.py  store.py
.github/: CODEOWNERS  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-security-vulnerability.yml  config.yml
.github/scripts/: issue-classifier.cjs
.github/workflows/: 01_branch-to-pr.yml  02_issue-to-branch.yml  03_pr-checks.yml  04_actionlint.yml  05_gitleaks.yml  06_codeql.yml  07_dependency-review.yml  08_scorecard.yml  09_semantic-pr.yml  10_pr-review.yml  11_security-pr-review.yml  12_dependabot-auto-merge.yml  13_pr-auto-merge.yml  14_bot-auto-fix.yml  15_merged-pr-cleanup.yml  18_issue-management.yml  19_issue-backfill.yml  20_readme-gen.yml  21_docs-sync.yml  60_ci-auto-heal.yml  (+37 more)
.playwright-mcp/: page-2026-04-24T07-17-06-650Z.yml  page-2026-04-24T07-17-20-915Z.yml  page-2026-04-24T07-17-48-722Z.yml
docs/: codebase-architecture.md
idle_outpost_api/: analyze_capture.py  auth.py  client.py  endpoints.py  firebase_config.py
idle_outpost_bot/: AD_REWARDS.md  API_RESEARCH.md  AUTOMATION_TARGETS.md  CALIBRATION_FULL.md  JADX_FULL_INVENTORY.md  README.md  __main__.py  actions.py  auto_calibrate.py  calibrate.py  config_loader.py  discover.py  driver.py  i18n_ko.properties  loop.py  notify.py  safety.py  settings.py  state.py  vision.py
worker/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.jsonc
(+35 files in other folders)
