[project]
name = "idle-outpost-codes"
version = "0.1.0"
description = "Idle Outpost promo code monitor + daily claim CLI + Android automation bot"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0,<5",
  "httpx>=0.27.0,<1",
  "python-dotenv>=1.0.0,<2",
  "scipy>=1.17.1",
]

[project.optional-dependencies]
bot = [
  "Appium-Python-Client>=4.0.0,<6",
  "selenium>=4.20.0,<5",
  "paddleocr>=2.7.0,<3",
  "paddlepaddle>=2.6.0,<4",
  "Pillow>=10.0.0,<12",
  "numpy>=1.24.0,<3",
  "pyyaml>=6.0,<7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
